--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -7,9 +7,14 @@
 .podlist_item {
   margin-bottom: 1rem;
   max-width: 300px;
+
+  .podlist_image {
+    width: 100%;
+    height: auto;
+  }
 }
 
-.podlist_image {
-  width: 100%;
-  height: auto;
+p {
+  font-size: var(--font-size-base);
+  margin: 0;
 }
