--- a/scss/_tablet.scss
+++ b/scss/_tablet.scss
@@ -9,8 +9,4 @@
   h1 {
     font-size: 36px;
   }
-
-  .podlist__item {
-    max-width: none;
-  }
 }
